# standalone-linux-io-tracer

./: .clang-format  .gitignore  .gitingore  .gitmodules  .pep8speaks.yml  CMakeLists.txt  Makefile  NOTICE  README.md  defenses.cmake  install.cmake  package.cmake  setup_dependencies.sh  version.cmake
configure.d/: 1_access_ok.conf  1_bdev_lookup.conf  1_bio_attr.conf  1_bio_discard.conf  1_bio_flags.conf  1_fs_notify_add_mark.conf  1_fs_notify_handle_event.conf  1_kernel_read.conf  1_trace_register.conf  1_vm_fault.conf  1_write_hint.conf  2_bio_flush.conf  Makefile  conf_framework
doc/: IOTRACER.md  tests-readme.md
doc/man/: CMakeLists.txt  MAN.md  iotrace.8
doc/resources/: sample_trace.tar.xz
modules/: CMakeLists.txt
source/: CMakeLists.txt
source/includes/: procfs_files.h
source/iotrace/: CMakeLists.txt  InterfaceKernelTraceCreatingImpl.cpp  InterfaceKernelTraceCreatingImpl.h  KernelRingTraceProducer.cpp  KernelRingTraceProducer.h  KernelTraceExecutor.cpp  KernelTraceExecutor.h  configure.sh  iotrace.bpf.c  iotrace.bpf.common.h  iotrace.bpf.defs.h  main.cpp
source/iotrace/configure.d/: 1_bio_write_hint.conf  1_inode.conf  1_page.conf  1_rq_write_hint.conf  conf_framework
source/iotrace/proto/: InterfaceKernelTraceCreating.proto
source/kernel/: .gitignore  CMakeLists.txt  Makefile  config-epel.h  config-ubuntu.h  config.c  config.h  config.mk  context.h  dss.c  generate_header.sh  io_trace.c  io_trace.h  iotrace_event.h  main.c  procfs.c  procfs.h  procfs_files.h  trace.c  trace.h  trace_bdev.c  trace_bdev.h  trace_bio.c  trace_bio.h  trace_env_kernel.h  trace_inode.c  trace_inode.h
source/kernel/configure.d/: 1_access_ok.conf  1_bdev_lookup.conf  1_bio_attr.conf  1_bio_discard.conf  1_bio_flags.conf  1_bio_trace_completion.conf  1_fs_notify_add_mark.conf  1_fs_notify_handle_event.conf  1_kernel_read.conf  1_proc_fs.conf  1_trace_register.conf  1_vm_fault.conf  1_vm_ops.conf  1_write_hint.conf  2_bio_flush.conf  Makefile  conf_framework
source/kernel/internal/: bio.h  context.h  dss.h  io_trace.h  trace_bdev.h  trace_bio.h  trace_env_kernel.h
source/userspace/: CMakeLists.txt  InterfaceKernelTraceCreatingImpl.cpp  InterfaceKernelTraceCreatingImpl.h  KernelRingTraceProducer.cpp  KernelRingTraceProducer.h  KernelTraceExecutor.cpp  KernelTraceExecutor.h  afl-fuzzer-utils.h  argv-fuzz-inl.h  main.cpp
source/userspace/proto/: InterfaceKernelTraceCreating.proto
tests/: README  README.md  __init__.py  conftest.py  dut_dependencies.txt  dut_requirements.txt
tests/api/: __init__.py  iotrace_lat_hist_parser.py  iotrace_stats_parser.py
tests/config/: example_config.yml
tests/functional/: test_fs.py  test_integrity.py  test_limits.py  test_management.py  test_package.py  test_performance.py  test_sanity.py  test_stats.py  test_stress.py  test_summary.py  test_trace_config.py  test_trace_io_events.py  test_trace_management.py  test_tracing.py  trace_fio.py  trace_fs.py  trace_io_events.py  trace_latency_histogram.py
tests/functional/fs/: test_fs_operations.py  test_fs_statistics.py
tests/functional/fuzzy/: README.txt  disable_modprobe.patch  fuzz.sh  redirect-fuzz.patch  test_fuzzy.py
tests/security/: test_fs.py  test_integrity.py  test_performance.py  test_sanity.py
tests/security/fuzzy/: README.txt  afl-fuzzer-utils.h  fuzz.sh  immediate-tracing.patch  redirect-fuzz-to-argv.patch  test_fuzzy.py
tests/utils/: afl.py  dut.py  fio.py  git.py  installer.py  iotrace.py  misc.py
tools/installer/: package-post-install.sh  postinst  postrm  prerm
tools/src_package/: generate_src_pkg.sh
